<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="admob_application_id">ca-app-pub-2222869408518511~9607465111</string>
    <string name="please_wait">Please wait!</string>
    <string name="app_name">Wallpaper Master</string>
    <string name="splash_subtitle">Make every screen yours</string>
    <string name="loading_inspiration">Loading your inspiration…</string>
    <string name="loading">Loading</string>
    <string name="home">Home</string>
    <string name="language">Language</string>
    <string name="loading_ads">Loading Ads</string>
    <string name="something_error">Something error</string>
    <string name="swipe_to_continue">Swipe to continue</string>
    <string name="loading_data">Loading data</string>
    <string name="setting">Setting</string>
    <string name="general_setting">General setting</string>
    <string name="information_about">Information about</string>
    <string name="developer">Developer</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="gdpr">GDPR</string>
    <string name="store_name">Store Name:</string>
    <string name="website">Website:</string>
    <string name="why_do_you_see_ads">Why do you see Ads?</string>
    <string name="des_advertisement_1">For production and development, we need funding, one of which comes from advertisement revenue</string>
    <string name="des_advertisment_2">1. To remove ads, you can support us by purchasing the premium version or the ad-removed version.</string>
    <string name="des_advertisement_3">2. Contact us by email to be considered for participation in the pilot program, from which you can use versions with less ads but may not be optimized for performance.</string>
    <string name="what_ads_type_do_we_use">What Ads type do we use?</string>
    <string name="des_advertisement_4">We are associated with many ad network partners and the largest is Google Ad for major ad formats</string>
    <string name="des_5">- Full screen ads interspersed between screens</string>
    <string name="des_6">- Banner, native ads are customized as a component of AD (usually with a yellow label)</string>
    <string name="des_7">We are always trying to balance the user experience and advertisement</string>
    <string name="please_select_language">Please select language</string>
    <string name="do_you_want_to_exit">Do you want to exit?</string>
    <string name="exit">Exit</string>
    <string name="good_morning">Good morning</string>
    <string name="good_afternoon">Good afternoon</string>
    <string name="good_evening">Good evening</string>
    <string name="categories" >Categories</string>
    <string name="trending" >Trending</string>
    <string name="live_gif" >Live GIF</string>
    <string name="live_video" >Live Video</string>
    <string name="favorites" >Favorites</string>
    <string name="search_hint" >Search wallpapers…</string>
    <string name="welcome_upper" >WELCOME</string>
    <string name="choose_your_language" >Choose your language</string>
    <string name="select_language_subtitle" >Select the language you\'d like to use in Wallpaper Master.</string>
    <string name="save_and_continue" >→  Save &amp; Continue</string>
    <string name="error_categories">Error caterogies: %1$s</string>
    <string name="wallpaper_description">Live GIF Wallpaper</string>
    <string name="video_wallpaper_description" >Live Video Wallpaper</string>
    <string name="preview_wallpaper" >Preview Wallpaper</string>
    <string name="set_wallpaper" >Set Wallpaper</string>
    <string name="error_load_gif" >Failed to process GIF file</string>
    <string name="error_load_video" >Failed to process Video file</string>
    <string name="success_set_wallpaper" >Wallpaper updated successfully!</string>
    <string name="select_gif_only" >Please select a valid GIF file</string>
    <string name="calendar_overlay_theme" >CALENDAR OVERLAY THEME!</string>
    <string name="calendar_overlay">Calendar Overlay</string>
    <string name="on" >ON</string>
    <string name="off" >OFF</string>
    <string name="calendar_position" >Calendar position</string>
    <string name="top" >Top</string>
    <string name="center" >Center</string>
    <string name="bottom" >Bottom</string>
    <string name="font_colors" >Font colors</string>
    <string name="your_media" >YOUR MEDIA</string>
    <string name="pick_custom_media" >Pick Custom Photo/Video</string>
    <string name="pick_media_description" >Choose from your device gallery. Photos, videos, and GIFs supported.</string>
    <string name="dark_mode" >Dark mode</string>
    <string name="system_default" >System default</string>
    <string name="get_started" >Get Started</string>
    <string name="onboarding_title_1" >Your screen, reimagined</string>
    <string name="onboarding_subtitle_1" >Discover more than a wallpaper. Make it personal, useful, and alive.</string>
    <string name="hd_wallpapers" >HD Wallpapers</string>
    <string name="hd_wallpapers_desc" >Crystal clear art curated for every mood.</string>
    <string name="live_wallpapers_title" >Live Video &amp; GIF Wallpapers</string>
    <string name="live_wallpapers_desc" >Bring your screen to life with subtle motion.</string>
    <string name="calendar_theme_overlays" >Calendar Theme Overlays</string>
    <string name="calendar_theme_desc" >Keep your month in view, beautifully.</string>
    <string name="no_favorites_yet">No favorites yet</string>
    <string name="download_wallpaper">Download</string>
    <string name="download_success">Downloaded to Gallery!</string>
    <string name="download_failed">Failed to download wallpaper</string>
    <string name="search_history">Recent Searches</string>
    <string name="clear_history">Clear</string>
    <string name="no_results_found">No wallpapers found</string>
    <string name="popular_keywords">Popular Keywords</string>
    <string name="theme_cyberpunk">⚡ Cyberpunk</string>
    <string name="theme_deep_sea">🌊 Deep Sea</string>
    <string name="theme_space">🌌 Space</string>
    <string name="theme_anime">🌸 Anime</string>
    <string name="theme_cars">🚗 Cars</string>
    <string name="theme_oled">🖤 OLED Dark</string>
    <string name="theme_nature">🌿 Nature</string>
    <string name="app_version">Application version: v%1$s %2$s %3$s</string>
    <string name="weather_based_wallpaper">WEATHER-BASED WALLPAPER</string>
    <string name="weather_overlay">Weather Overlay</string>
    <string name="weather_description">Automatically adapt wallpaper effects based on current weather.</string>
    <string name="weather_sunny">Clear &amp; Sunny</string>
    <string name="weather_cloudy">Partly Cloudy</string>
    <string name="weather_rainy">Rainy</string>
    <string name="weather_snowy">Snowy</string>
    <string name="weather_thunderstorm">Thunderstorm</string>
    <string name="current_location">Current Location</string>
</resources>