<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_home">

    <!-- Header -->
    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24dp"
        android:layout_marginTop="@dimen/_24dp"
        android:fontFamily="@font/font_700"
        android:text="@string/setting"
        android:textColor="@color/white"
        android:textSize="@dimen/_24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHeader">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_24dp"
            android:paddingBottom="@dimen/_24dp">

            <!-- CALENDAR OVERLAY THEME -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12dp"
                android:fontFamily="@font/font_700"
                android:text="@string/calendar_overlay_theme"
                android:textColor="@color/purple_primary"
                android:textSize="@dimen/_12sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12dp"
                app:cardBackgroundColor="@color/bg_bottom_nav"
                app:cardCornerRadius="@dimen/_16dp"
                app:cardElevation="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_16dp">

                    <ImageView
                        android:id="@+id/ivCalendarIcon"
                        android:layout_width="@dimen/_40dp"
                        android:layout_height="@dimen/_40dp"
                        android:background="@drawable/bg_rounded"
                        android:backgroundTint="#241B38"
                        android:padding="@dimen/_10dp"
                        android:src="@drawable/ic_categories"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/purple_primary" />

                    <TextView
                        android:id="@+id/tvCalendarTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_12dp"
                        android:fontFamily="@font/font_700"
                        android:text="@string/calendar_overlay"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14sp"
                        app:layout_constraintStart_toEndOf="@id/ivCalendarIcon"
                        app:layout_constraintTop_toTopOf="@id/ivCalendarIcon" />

                    <TextView
                        android:id="@+id/tvCalendarStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/font_400"
                        android:text="@string/on"
                        android:textColor="@color/text_secondary"
                        android:textSize="@dimen/_12sp"
                        app:layout_constraintStart_toStartOf="@id/tvCalendarTitle"
                        app:layout_constraintTop_toBottomOf="@id/tvCalendarTitle" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switchCalendar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:thumb="@drawable/switch_thumb"
                        app:track="@drawable/switch_track"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <!-- Calendar position -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24dp"
                android:fontFamily="@font/font_700"
                android:text="@string/calendar_position"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btnPosTop"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_40dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_category_selected"
                    android:gravity="center"
                    android:text="@string/top"
                    android:textColor="@color/black"
                    android:fontFamily="@font/font_700" />

                <TextView
                    android:id="@+id/btnPosCenter"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_40dp"
                    android:layout_marginStart="@dimen/_8dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_category_unselected"
                    android:gravity="center"
                    android:text="@string/center"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/btnPosBottom"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_40dp"
                    android:layout_marginStart="@dimen/_8dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_category_unselected"
                    android:gravity="center"
                    android:text="@string/bottom"
                    android:textColor="@color/white" />

            </LinearLayout>

            <!-- Font colors -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24dp"
                android:fontFamily="@font/font_700"
                android:text="@string/font_colors"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sp" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12dp"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/layoutColors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_rounded"
                    android:backgroundTint="@color/bg_bottom_nav"
                    android:orientation="horizontal"
                    android:padding="@dimen/_12dp">
                    <!-- Color circles will be here -->
                </LinearLayout>
            </HorizontalScrollView>

            <!-- YOUR MEDIA -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24dp"
                android:fontFamily="@font/font_700"
                android:text="@string/your_media"
                android:textColor="@color/purple_primary"
                android:textSize="@dimen/_12sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPickMedia"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_56dp"
                android:layout_marginTop="@dimen/_12dp"
                android:backgroundTint="@color/purple_primary"
                android:fontFamily="@font/font_700"
                android:text="@string/pick_custom_media"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sp"
                app:cornerRadius="@dimen/_28dp"
                app:icon="@android:drawable/ic_menu_gallery"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/_8dp"
                app:iconTint="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8dp"
                android:fontFamily="@font/font_400"
                android:text="@string/pick_media_description"
                android:textColor="@color/text_secondary"
                android:textSize="@dimen/_10sp" />

            <!-- Dark mode -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingVertical="@dimen/_12dp">

                <ImageView
                    android:layout_width="@dimen/_24dp"
                    android:layout_height="@dimen/_24dp"
                    android:src="@drawable/baseline_close_24"
                    app:tint="@color/white" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/font_700"
                        android:text="@string/dark_mode"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/font_400"
                        android:text="@string/system_default"
                        android:textColor="@color/text_secondary"
                        android:textSize="@dimen/_12sp" />
                </LinearLayout>

            </LinearLayout>

            <!-- Version and Footer -->
            <TextView
                android:id="@+id/txvVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_24dp"
                android:fontFamily="@font/font_500"
                android:textColor="@color/text_secondary"
                android:textSize="@dimen/_12sp"
                tools:text="Application version: v 1.0.1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_19dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_8dp"
                android:src="@drawable/pion_year" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>